updated css to help resolve zoom on input focus on mobile view

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -789,4 +789,6 @@ div.search_area .nav-tabs {padding-left:10px;}
 
 .add-main {width:100% !important}
 .add-suite {width:100% !important}
+
+.form-control {font-size:16px !important;}
 }
